--- a/Cuisines.html
+++ b/Cuisines.html
@@ -144,7 +144,7 @@
 
     <script>
         const countries = [
-            { name: "India", flag: "https://flagcdn.com/w320/in.png", link: "india.html" },
+            { name: "India", flag: "https://flagcdn.com/w320/in.png", link: "India.html" },
             { name: "United States", flag: "https://flagcdn.com/w320/us.png", link: "us.html" },
             { name: "United Kingdom", flag: "https://flagcdn.com/w320/gb.png", link: "uk.html" },
             { name: "France", flag: "https://flagcdn.com/w320/fr.png", link: "France.html" },
