--- a/Reservation.html
+++ b/Reservation.html
@@ -212,7 +212,7 @@
             </div>
             <div class="mb-3 input-group">
                 <span class="input-group-text"><i class="fas fa-users"></i></span>
-                <input type="number" id="guests" class="form-control" placeholder="Number of Guests" min="1" required>
+                <input type="number" id="guests" class="form-control" value="1" min="1" required>
             </div>
             <button type="submit" class="btn btn-danger mt-3">Reserve Now</button>
         </form>
